--- a/src/components/Quiz/Quiz.css
+++ b/src/components/Quiz/Quiz.css
@@ -1,5 +1,6 @@
 .quiz-main {
     width: 50%; 
+    max-width: 400px; 
     margin-left: auto; 
     margin-right: auto; 
     background-color: rgb(211, 211, 211); 
@@ -37,10 +38,14 @@
 }
 
 .quiz-button-submit {
-    margin-top: 20px; 
+    margin-top: 30px; 
     color: white; 
     background-color: black; 
-    padding: 10px 15px; 
+    padding: 15px 15px; 
     width: 100%; 
     font-size: 14px; 
+}
+
+.quiz-form {
+    margin-top: 30px; 
 }
