--- a/src/components/Quiz/Quiz.css
+++ b/src/components/Quiz/Quiz.css
@@ -7,7 +7,9 @@
     padding: 50px; 
     z-index: 21;
     color: rgb(68, 68, 68);
-    transition: 1s;  
+    transition: 1s;
+    box-shadow: 0px 0px 40px rgb(29, 29, 29); 
+    border-radius: 3px;  
 }
 
 .quiz-backdrop {
