--- a/src/components/BoardPost/BoardPost.css
+++ b/src/components/BoardPost/BoardPost.css
@@ -1,16 +1,23 @@
 .board-post {
-    background-color: rgb(70, 70, 70); 
+    background-color: rgb(0, 0, 0); 
     width: 25%; 
     padding: 0px;  
     margin-bottom: 0px; 
     display: inline-block; 
     cursor: pointer; 
+    overflow: hidden; 
 }
 
 .board-post-image {
     width: 100%;
     padding: 0px; 
     margin: 0px; 
+    transition: all .2s ease-in-out; 
+}
+
+.board-post-image:hover {
+    transform: scale(1.1); 
+    opacity: 0.6; 
 }
 
 /* TABLET STYLES */
