--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,4 +2,7 @@
     width: 100%; 
     background-color: rgb(20, 20, 20); 
     height: 200px; 
+    margin-bottom: none; 
+    position: absolute; 
+    bottom: 0px; 
 }
