--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -3,4 +3,5 @@
     margin-left: auto; 
     margin-right: auto; 
     border-top: 3px solid rgb(39, 39, 39); 
+    background: rgb(39, 39, 39); 
 }
