background colors fixed

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,5 +2,6 @@
     width: 100%; 
     background-color: rgb(20, 20, 20); 
     height: 200px; 
-    margin-bottom: none;  
+    margin-bottom: none; 
+    border-top: 3px solid rgb(39, 39, 39);  
 }
