--- a/src/components/BoardHeader/BoardHeader.css
+++ b/src/components/BoardHeader/BoardHeader.css
@@ -1,9 +1,8 @@
 .board-header {
     width: 100%; 
     background-color: rgb(20, 20, 20); 
-    height: 200px; 
     margin-bottom: none;
-    padding: 50px 100px;   
+    padding: 70px 100px 80px;   
 }
 
 .board-header-header {
@@ -20,4 +19,34 @@
     font-size: 20px; 
     margin-top: 15px;
     line-height: 30px; 
+}
+
+.board-header-container {
+    margin-left: auto; 
+    margin-right: auto; 
+    max-width: 1500px; 
+    width: 80%; 
+}
+
+/* TABLET STYLES */
+
+@media screen and (max-width: 850px) {
+    .board-header-container {
+        width: 80%; 
+    }
+}
+
+
+/* MOBILE STYLES */
+
+@media screen and (max-width: 700px) {
+    .board-header-container {
+        width: 95%; 
+    }
+    .board-header {
+        width: 100%; 
+        background-color: rgb(20, 20, 20); 
+        margin-bottom: none;
+        padding: 70px 30px 80px;   
+    }
 }
