--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -1,6 +1,19 @@
 .welcome {
     width: 100%;  
-    height: 400px; 
+    height: 400px;
+    display: flex; 
+    align-items: center; 
+}
+
+.welcome-title {
+  color: white; 
+  font-family: 'Bree Serif', serif;
+  text-align: center; 
+  font-size: 40px; 
+  margin-left: auto; 
+  margin-right: auto; 
+  line-height: 40px;
+  padding: 50px;  
 }
 
 * { box-sizing: border-box; }
@@ -38,4 +51,17 @@
 }
 @media all and (max-width: 500px) {
 .vid-info .acronym { display: none; }
+}
+
+
+
+
+
+/* MOBILE STYLES */
+
+@media screen and (max-width: 700px) {
+  .welcome-title {
+    font-size: 30px;  
+    line-height: 30px;
+  }
 }
