--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -5,3 +5,16 @@
     border-top: 3px solid rgb(39, 39, 39); 
     background: rgb(0, 0, 0); 
 }
+
+.board-container {
+    width: 80%; 
+    margin-left: auto; 
+    margin-right: auto; 
+    padding: 50px 0px; 
+}
+
+@media screen and (max-width: 900px) {
+    .board-container {
+        width: 100%; 
+    } 
+}
