--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -5,15 +5,30 @@
     align-items: center; 
 }
 
+.welcome-title-container {
+  margin-left: auto; 
+  margin-right: auto;
+}
+
 .welcome-title {
   color: white; 
   font-family: 'Bree Serif', serif;
   text-align: center; 
-  font-size: 40px; 
-  margin-left: auto; 
-  margin-right: auto; 
+  font-size: 40px;  
   line-height: 40px;
-  padding: 50px;  
+  margin: 0px; 
+  padding: 0px 0px;
+  text-shadow: 0px 0px 2px black;  
+}
+
+.welcome-title-sub {
+  color: white; 
+  font-family: 'Bree Serif', serif;
+  text-align: center; 
+  font-size: 30px;  
+  margin: 0px; 
+  padding: 0px; 
+  text-shadow: 0px 0px 1px rgb(53, 53, 53); 
 }
 
 * { box-sizing: border-box; }
@@ -55,13 +70,14 @@
 
 
 
-
-
 /* MOBILE STYLES */
 
 @media screen and (max-width: 700px) {
   .welcome-title {
     font-size: 30px;  
     line-height: 30px;
+  }
+  .welcome-title-sub {
+    font-size: 20px;    
   }
 }
