--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -16,7 +16,7 @@
   text-align: center; 
   font-size: 40px;  
   line-height: 40px;
-  margin: 0px; 
+  margin-top: 90px; 
   padding: 0px 0px;
   text-shadow: 0px 0px 2px black;  
 }
