--- a/src/components/Quiz/Quiz.css
+++ b/src/components/Quiz/Quiz.css
@@ -9,7 +9,8 @@
     color: rgb(68, 68, 68);
     transition: 1s;
     box-shadow: 0px 0px 40px rgb(29, 29, 29); 
-    border-radius: 3px;  
+    border-radius: 3px;
+    transition: 0.3s;   
 }
 
 .quiz-backdrop {
