--- a/src/components/Quiz/Quiz.css
+++ b/src/components/Quiz/Quiz.css
@@ -62,6 +62,22 @@
     background-color: rgb(49, 49, 58); 
 } 
 
+.quiz-button-start {
+    margin-top: 30px; 
+    color: white; 
+    background-color: rgb(94, 116, 95); 
+    padding: 20px 15px; 
+    width: 100%; 
+    font-size: 17px;
+    border-radius: 5px;  
+    transition: 0.6s; 
+    cursor: pointer; 
+}
+
+.quiz-button-start:hover {
+    background-color: rgb(79, 97, 79); 
+} 
+
 .quiz-form {
     margin-top: 30px; 
 }
