--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -10,6 +10,20 @@
   margin-right: auto;
 }
 
+
+.welcome-sidebar {
+  position: relative; 
+  height: 100%; 
+  top: 0px;  
+  left: 0px; 
+  width: 30%; 
+  background-color: rgba(255, 255, 255, 0.3); 
+  padding: 20px; 
+  display: flex; 
+  justify-content: flex-end; 
+  flex-direction: column;
+}
+
 .welcome-title {
   color: white; 
   font-family: 'Bree Serif', serif;
