--- a/src/components/Nasa/Nasa.css
+++ b/src/components/Nasa/Nasa.css
@@ -13,9 +13,24 @@
     line-height: 30px; 
 }
 
+.nasa-enlarge-icon {
+    position: relative; 
+    top: 280px; 
+    font-size: 20px; 
+    color: white; 
+    opacity: 0;   
+    transition: 0.3s; 
+}
+
+.nasa-enlarge-icon.show {
+    opacity: 1 !important; 
+}
+
 .nasa-image { 
     width: 100%; 
     margin-top: 20px; 
+    display:block; 
+    cursor: pointer;  
 }
 
 .nasa-subpic {
@@ -25,7 +40,7 @@
 }
 
 .nasa-title-container {
-    background-color: #b7bccf; 
+    background-color: #363944; 
     height: 45px;  
     display: inline-block;
     padding: 0px 20px 0px 40px;  
@@ -54,7 +69,7 @@
 }
 
 .nasa-section-right {
-    width: 500px; 
+    width: 450px; 
     display: inline-block; 
 }
 
@@ -69,7 +84,7 @@
 }
 
 .nasa-flex-grey {
-    background-color: rgb(243, 243, 243); 
+    background-color: rgb(233, 233, 233); 
     padding: 50px; 
 }
 
