--- a/src/components/NasaPhoto/NasaPhoto.css
+++ b/src/components/NasaPhoto/NasaPhoto.css
@@ -23,7 +23,7 @@
     z-index: 21;
     color: rgb(68, 68, 68);
     transition: 1s;
-    box-shadow: 0px 0px 40px rgb(29, 29, 29); 
+    box-shadow: 0px 0px 40px rgb(14, 14, 14); 
     border-radius: 3px;
     transition: 0.3s;
     max-height: 100%;    
@@ -47,6 +47,25 @@
 .nasa-photo-close:hover {
     opacity: 0.8; 
 }
+
+.nasa-photo-info-icon {
+    color: white
+   }
+   
+   .nasa-photo-info {
+       float: right; 
+       opacity: 0.6; 
+       font-size: 20px; 
+       position: relative; 
+       top: 40px; 
+       right: 50px; 
+       transition: 0.3s; 
+       cursor: pointer;
+   }
+   
+   .nasa-photo-info:hover {
+       opacity: 0.8; 
+   }
 
 .nasa-photo {
     width: 100%;
