--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,4 +12,22 @@
     color: white; 
     padding: 20px 50px 25px; 
     font-size: 30px; 
+    display: inline-block; 
+}
+
+.header-social-container {
+    width: 35px; 
+    display: inline-block; 
+    margin-left: 5px;
+    transition: 0.3s;  
+}
+
+.header-social-container:hover {
+    opacity: 0.7; 
+}
+
+.header-social-link-container {
+    float: right; 
+    margin-top: 27px; 
+    margin-right: 50px; 
 }
