--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -13,6 +13,10 @@
     padding: 50px 0px; 
 }
 
+.board-loader {
+    text-align: center; 
+}
+
 @media screen and (max-width: 900px) {
     .board-container {
         width: 100%; 
