quiz reconfigured with local images

--- a/src/components/Nasa/Nasa.css
+++ b/src/components/Nasa/Nasa.css
@@ -33,6 +33,14 @@
     cursor: pointer;  
 }
 
+.nasa-loading {
+    width: 100%; 
+    margin-top: 20px; 
+    display:block; 
+    height: 300px; 
+    background-color: rgb(32, 32, 32); 
+}
+
 .nasa-subpic {
     font-size: 16px; 
     color: grey;
