--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -17,8 +17,53 @@
     text-align: center; 
 }
 
+.board-post {
+    background-color: rgb(0, 0, 0); 
+    width: 25%; 
+    padding: 0px;  
+    margin-bottom: 0px; 
+    display: inline-block; 
+    cursor: pointer; 
+    overflow: hidden; 
+}
+
+.board-post-image {
+    width: 100%;
+    padding: 0px; 
+    margin: 0px; 
+    transform: scale(0.8);
+    transition: all .2s ease-in-out; 
+}
+
+.board-post-image:hover {
+    transform: scale(0.9); 
+    opacity: 0.6; 
+}
+
+
 @media screen and (max-width: 900px) {
     .board-container {
         width: 100%; 
     } 
 }
+
+/* TABLET STYLES */
+
+@media screen and (max-width: 850px) {
+    .board-post {
+        width: 50%; 
+    }
+}
+
+/* MOBILE STYLES */
+
+@media screen and (max-width: 500px) {
+    .board-post {
+        width: 100%; 
+    }
+}
+
+
+
+
+
