--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -36,9 +36,9 @@
 
 .welcome-title-sub {
   color: white; 
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Damion', cursive;
   text-align: center; 
-  font-size: 33px;  
+  font-size: 40px;  
   margin: 0px; 
   padding: 0px; 
   text-shadow: 0px 0px 20px black; 
@@ -91,6 +91,6 @@
     line-height: 35px;
   }
   .welcome-title-sub {
-    font-size: 25px;    
+    font-size: 35px;    
   }
 }
