--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -31,3 +31,9 @@
     margin-top: 27px; 
     margin-right: 50px; 
 }
+
+@media screen and (max-width: 500px) {
+    .header-social-link-container {
+        display: none;  
+    }
+}
