--- a/src/components/NasaPhoto/NasaPhoto.css
+++ b/src/components/NasaPhoto/NasaPhoto.css
@@ -10,10 +10,12 @@
     right: 0px; 
     position: fixed;
     align-items: center; 
+    display: flex; 
+    align-items: center;
 }
 
 .nasa-photo-main {
-    max-width: 90%; 
+    max-width: 70%; 
     margin-left: auto; 
     margin-right: auto; 
     margin-top: 0px;
@@ -25,7 +27,8 @@
     box-shadow: 0px 0px 40px rgb(14, 14, 14); 
     border-radius: 3px;
     transition: 0.3s;
-    max-height: 90%;    
+    max-height: 90%;
+    overflow: hidden;     
 }
 
 .nasa-photo-close-icon {
@@ -51,23 +54,23 @@
     color: white
 }
    
-   .nasa-photo-info {
-       float: right; 
-       opacity: 0.6; 
-       font-size: 20px; 
-       position: relative; 
-       top: 40px; 
-       right: 50px; 
-       transition: 0.3s; 
-       cursor: pointer;
-   }
-   
-   .nasa-photo-info:hover {
-       opacity: 0.8; 
-   }
+.nasa-photo-info {
+    float: right; 
+    opacity: 0.6; 
+    font-size: 20px; 
+    position: relative; 
+    top: 40px; 
+    right: 50px; 
+    transition: 0.3s; 
+    cursor: pointer;
+}
+
+.nasa-photo-info:hover {
+    opacity: 0.8; 
+}
 
 .nasa-photo {
-    width: 100%;
+    display: block; 
     margin: 0px; 
-    height: 100%;  
+    width: 100%;   
 }
