background fixed again

--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -108,6 +108,7 @@
     display: block;
     z-index: -2; 
     position: absolute;
-    width: 100%;    
+    width: 100%; 
+    margin-top: 50px;    
   }
 }
