mobile styles improved

--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -107,7 +107,7 @@
   #welcome-mobile {
     display: block;
     z-index: -2; 
-    position: absolute;
+    position: fixed;
     width: 100%; 
     margin-top: 50px;    
   }
