--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -64,6 +64,7 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
+  transition: opacity 1000ms ease-in-out;
 }
 #vidtop-content {
 	top: 0;
