--- a/src/components/Quiz/Quiz.css
+++ b/src/components/Quiz/Quiz.css
@@ -17,21 +17,6 @@
     line-height: 22px; 
 }
 
-/* .quiz-backdrop {
-    background-color: rgba(0, 0, 0, 0.7);
-    height: 100%; 
-    width: 100%; 
-    margin: 0px; 
-    z-index: 20; 
-    top: 0px; 
-    bottom: 0px; 
-    left: 0px; 
-    right: 0px; 
-    position: fixed;
-    display: flex; 
-    align-items: center; 
-} */
-
 .quiz-question {
     margin-bottom: 10px; 
 }
@@ -112,3 +97,19 @@
     margin-top: 20px; 
 }
 
+@media screen and (max-width: 600px) {
+    .quiz-main {
+        width: 100%; 
+        border-radius: 0px;
+        transition: 0.3s;   
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .quiz-main {
+        width: 100%; 
+        height: 100%; 
+        border-radius: 0px;
+        transition: 0.3s;   
+    }
+}
