text reduced welcome mobile version

--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -116,4 +116,11 @@
     width: 100%; 
     margin-top: 50px;    
   }
+  .welcome-title {
+    font-size: 25px;  
+    line-height: 35px;
+  }
+  .welcome-title-sub {
+    font-size: 30px;    
+  }
 }
