--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -113,6 +113,7 @@
     display: block;
     z-index: -2; 
     position: fixed;
+    top: -5px;  
     width: 100%; 
     margin-top: 50px;    
   }
