--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -57,7 +57,7 @@
   z-index: -99;
 }
 .video-foreground,
-.video-background iframe {
+.video-background video {
   position: absolute;
   top: 0;
   left: 0;
