--- a/src/components/Quiz/Quiz.css
+++ b/src/components/Quiz/Quiz.css
@@ -19,11 +19,14 @@
 
 .quiz-question {
     margin-bottom: 10px; 
+    display: flex; 
+    align-items: center; 
 }
 
 .quiz-question-label {
     position: relative; 
-    top: 2px; 
+    top: 2px;
+    margin-left: 5px;  
 }
 
 .quiz-title {
@@ -40,7 +43,8 @@
     font-size: 17px;
     border-radius: 5px;  
     transition: 0.6s; 
-    cursor: pointer; 
+    cursor: pointer;
+    border: 0px; 
 }
 
 .quiz-button-submit:hover {
@@ -57,6 +61,7 @@
     border-radius: 5px;  
     transition: 0.6s; 
     cursor: pointer; 
+    border: 0px;
 }
 
 .quiz-button-start:hover {
